--- a/css/add_task_2.css
+++ b/css/add_task_2.css
@@ -113,6 +113,8 @@
     justify-content: space-between;
     font-size: 16px;
     margin-right: 35px;
+    width: 100%;
+    gap: 20px;
 }
 
 .button-footer {
