--- a/css/add_task.css
+++ b/css/add_task.css
@@ -93,6 +93,8 @@ body {
     background-color: rgba(255, 255, 255, 1);
     border-color: rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
 }
 
 #footer-board {
@@ -174,6 +176,7 @@ h1 {
     display: flex;
     font-size: 20px;
     gap: 48px;
+    flex: 1;
 }
 
 input {
@@ -190,10 +193,6 @@ input {
     width: 440px;
     height: 424px;
     gap: 24px;
-}
-
-.content-left {
-    height: auto;
 }
 
 .content-left-padding {
@@ -309,15 +308,14 @@ input {
     min-height: 120px;
 }
 
-.fiel-required {
+.field-required {
     display: flex;
     justify-content: space-around;
-    margin-top: 150px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .button-footer-addTask {
-    top: 750px;
-    left: 716.25px;
     gap: 25px;
     display: flex;
 }
