--- a/assets/templates/css/add_task_mediaqueries.css
+++ b/assets/templates/css/add_task_mediaqueries.css
@@ -7,6 +7,11 @@
         scrollbar-width: none;
     }
 
+    .head {
+        margin-top: 60px;
+        margin-bottom: 10px;
+    }
+
     .container {
         display: flex;
         flex-direction: column;
@@ -48,12 +53,8 @@
     .footer {
         margin-top: 0;
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 10px;
         margin-bottom: 10px;
-    }
-
-    .footer span {
-        width: 80px;
     }
 }
 
@@ -63,6 +64,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        gap: 10px;
     }
 
     .content {
@@ -170,7 +172,6 @@
     }
 
     .required-field-footer {
-        width: 30%;
         margin-left: 10px;
     }
 
