--- a/assets/templates/css/add_task_mediaqueries.css
+++ b/assets/templates/css/add_task_mediaqueries.css
@@ -128,6 +128,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        bottom: -173px;
     }
 
     .display-contacts-dropdown {
