--- a/assets/templates/css/add_task_mediaqueries.css
+++ b/assets/templates/css/add_task_mediaqueries.css
@@ -181,7 +181,6 @@
     }
 
     .footer span {
-        width: 345px;
         font-size: 18px;
         justify-content: center;
         font-size: 16px;
@@ -209,9 +208,9 @@
 }
 
 @media(max-width: 360px) {
+
     .content-left,
-    .content-right
-    {
+    .content-right {
         margin-left: 10px;
         margin-right: 10px;
     }
